# Pantomir

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dev.ps1  imgui.ini  vcpkg.json
Assets/Shaders/: DebugLine.frag  DebugLine.vert  HDRI.frag  HDRI.vert  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  input_structures.glsl  mesh.frag  mesh.vert  shader.frag  shader.vert  sky.comp  tex_image.frag
PantomirEditor/: CMakeLists.txt
PantomirEditor/src/: editor.cpp
PantomirEngine/: CMakeLists.txt
PantomirEngine/Submodules/pantomir-platform/: CMakeLists.txt
PantomirEngine/Submodules/pantomir-platform/include/: InputEvents.h  InputManager.h
PantomirEngine/Submodules/pantomir-platform/src/: InputManager.cpp  PantomirWindow.cpp
PantomirEngine/Submodules/pantomir-renderer/vulkan-backend/: CMakeLists.txt
PantomirEngine/Submodules/pantomir-renderer/vulkan-backend/include/: ModelLoader.h  VulkanBufferManager.h  VulkanDeviceManager.h  VulkanInstanceManager.h  VulkanRenderer.h  VulkanResourceManager.h
PantomirEngine/Submodules/pantomir-renderer/vulkan-backend/src/: Camera.cpp  ModelLoader.cpp  VulkanBufferManager.cpp  VulkanInstanceManager.cpp  VulkanRenderer.cpp  VulkanResourceManager.cpp
PantomirEngine/Submodules/pantomir-utils/: CMakeLists.txt
PantomirEngine/Submodules/pantomir-utils/include/: Logger.h  LoggerMacros.h
PantomirEngine/Submodules/pantomir-utils/src/: Logger.cpp
PantomirEngine/include/: PantomirEngine.h
PantomirEngine/pantomir-platform/: CMakeLists.txt
PantomirEngine/pantomir-platform/include/: InputManager.h  PantomirWindow.h
PantomirEngine/pantomir-platform/src/: InputManager.cpp  PantomirWindow.cpp
PantomirEngine/pantomir-renderer/vulkan-backend/: CMakeLists.txt
PantomirEngine/pantomir-renderer/vulkan-backend/include/: Camera.h  ModelLoader.h  QueueFamilyIndices.h  SwapchainSupportDetails.h  Vertex.h  VulkanBufferManager.h  VulkanDevice.h  VulkanDeviceManager.h  VulkanInstance.h  VulkanInstanceManager.h  VulkanRenderer.h  VulkanResourceManager.h
PantomirEngine/pantomir-renderer/vulkan-backend/src/: Camera.cpp  ModelLoader.cpp  VulkanBufferManager.cpp  VulkanDevice.cpp  VulkanDeviceManager.cpp  VulkanInstance.cpp  VulkanInstanceManager.cpp  VulkanRenderer.cpp  VulkanResourceManager.cpp
PantomirEngine/src/: PantomirEngine.cpp
cmake/: Dependencies.cmake  PrintVariables.cmake  Shaders.cmake
cmake/Dependencies/: Assimp.cmake  GLFW.cmake  ImGui.cmake  SDL3.cmake  Stb.cmake  VulkanMemoryAllocator.cmake  glm.cmake  imgui.cmake  vk-bootstrap.cmake  xxHash.cmake
dev-tools/: start.ps1
pantomir-engine/: CMakeLists.txt
pantomir-engine/engine-platform/: CMakeLists.txt
pantomir-engine/engine-platform/include/: InputEvents.h  InputManager.h  PantomirWindow.h
pantomir-engine/engine-platform/source/: InputManager.cpp  PantomirWindow.cpp
pantomir-engine/engine-renderer-vulkan/: CMakeLists.txt
pantomir-engine/engine-renderer-vulkan/include/: Camera.h  ModelLoader.h  QueueFamilyIndices.h  Vertex.h  VulkanBufferManager.h  VulkanDeviceManager.h  VulkanInstanceManager.h  VulkanRenderer.h
pantomir-engine/engine-renderer-vulkan/source/: ModelLoader.cpp  VulkanBufferManager.cpp  VulkanDeviceManager.cpp  VulkanInstanceManager.cpp  VulkanRenderer.cpp  VulkanResourceManager.cpp
pantomir-engine/engine-utils/: CMakeLists.txt
pantomir-engine/engine-utils/include/: Logger.h  LoggerMacros.h
pantomir-engine/engine-utils/source/: Logger.cpp
pantomir-engine/include/: PantomirEngine.h  VkTypes.h
pantomir-engine/source/: Camera.cpp  Camera.h  PantomirEngine.cpp  PantomirEngine.h  PantomirFunctionLibrary.cpp  PantomirFunctionLibrary.h  VKPipelines.cpp  VKPipelines.h  VkDescriptors.cpp  VkDescriptors.h  VkImages.cpp  VkImages.h  VkInitializers.cpp  VkInitializers.h  VkLoader.cpp  VkLoader.h  VkPipelines.cpp  VkPipelines.h  VkPushConstants.h  VkTypes.h
